try to resolve on ios resolution

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10941,7 +10941,7 @@ body {
   position: absolute;
   width: calc(100% - 20px);
   max-width: 800px;
-  height: 800px;
+  height: 700px;
   border-radius: 10px;
   background-color: #fff;
   left: 50%;
@@ -10996,7 +10996,7 @@ body {
   list-style: none;
   padding: 20px 10px 0 10px;
   margin: 0;
-  height: 647px;
+  height: 547px;
   overflow: scroll;
 }
 
@@ -11154,22 +11154,12 @@ body {
   display: none;
 }
 
-input[type=color],
-input[type=date],
-input[type=datetime],
-input[type=datetime-local],
-input[type=email],
-input[type=month],
-input[type=number],
-input[type=password],
-input[type=search],
-input[type=tel],
-input[type=text],
-input[type=time],
-input[type=url],
-input[type=week],
-select:focus,
-textarea {
-  font-size: 16px;
+body {
+  font-size: 16px !important;
+}
+
+input,
+select {
+  font-size: 100% !important;
 }
 
