--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -11,7 +11,7 @@ body {
     position: absolute;
     width: calc(100% - 20px);
     max-width: 800px;
-    height: 800px;
+    height: 700px;
     border-radius: 10px;
     background-color: #fff;
     left: 50%;
@@ -60,7 +60,7 @@ body {
     list-style: none;
     padding: 20px 10px 0 10px;
     margin: 0;
-    height: 647px;
+    height: 547px;
     overflow: scroll;
 }
 .messages .message {
@@ -197,21 +197,10 @@ body {
     display: none;
 }
 
-input[type="color"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="email"],
-input[type="month"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="time"],
-input[type="url"],
-input[type="week"],
-select:focus,
-textarea {
-    font-size: 16px;
+body {
+    font-size: 16px !important;
+}
+input,
+select {
+    font-size: 100% !important;
 }
